# lifeSimulator

./: .clang-format  CMakeLists.txt  main.cpp  style.qss
src/: gamemanager.cpp  gamemanager.h  managermessagepasser.cpp  managermessagepasser.h  msgpasser.cpp  msgpasser.h  singleton.h
src/UI/: status.h
src/character/: Lint.cpp  Lint.h  character.cpp  character.h
src/character/component/: component.cpp  component.h
src/character/component/healthcomponent/: healthcomponent.h
src/character/component/itemcomponent/: itemcomponent.h
src/character/protagonist/: protagonist.cpp  protagonist.h
src/factory/: scenefactory.cpp  scenefactory.h
src/game/: E_game.h  game.cpp  game.h
src/game/straydiarygame/: straydiarygame.cpp  straydiarygame.h
src/item/: item.cpp  item.h
src/item/food/: food.cpp  food.h
src/manager/: gamemanager.h  manager.cpp  manager.h  scenemanager.cpp  scenemanager.h
src/manager/gamemanager/: gamemanager.cpp  gamemanager.h
src/manager/savemanager/: savemanager.cpp  savemanager.h
src/manager/scenemanager/: scenemanager.cpp  scenemanager.h
src/scene/: E_scene.h  gamemainscreen.cpp  gamemainscreen.h  gamescenemanager.cpp  gamescenemanager.h  gamestartscreen.cpp  gamestartscreen.h  mainscreen.cpp  mainscreen.h  mainwindow.cpp  mainwindow.h  scene.cpp  scene.h  startscreen.cpp  startscreen.h
src/scene/craftscreen/: craftscreen.cpp  craftscreen.h
src/scene/mainscreen/: mainscreen.cpp  mainscreen.h
src/scene/startscreen/: startscreen.cpp  startscreen.h
src/utils/: Lint.cpp
src/widget/: scrollingtextdisplay.cpp  scrollingtextdisplay.h  status.cpp  status.h
